--- a/index.html
+++ b/index.html
@@ -1,10 +1,50 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <title>Recorded Music Database</title>
 </head>
 <body>
-    FREDERICK!!!
+<div class="container-fluid">
+    <div class="container">
+
+        <div class="jumbotron" style="text-align: center">
+            <h3>Music Database</h3>
+            <p>Database of recorded music.</p>
+        </div>
+
+        <div id="addSongButtonId">
+            <a class="btn btn-large btn-secondary" href="addSong.html">ADD SONG</a>
+            <!--<a class="btn btn-primary" href="addSong.html" role="button">ADD SONG</a>-->
+
+            <a class="btn btn-large btn-secondary" href="searchSong.html">SEARCH FOR SONG</a>
+
+        </div>
+
+        <!--<div id="searchSongButtonId">-->
+            <!--<a class="btn btn-large btn-info" href="searchSong.html">SEARCH FOR SONG</a>-->
+        <!--</div>-->
+
+    </div>
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
