--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Recorded Music Database</title>
 </head>
 <body>
@@ -20,33 +19,45 @@
             <p>Database of recorded music.</p>
         </div>
 
-        <div id="addSongButtonId">
-            <a class="btn btn-large btn-secondary" href="addSong.html">ADD SONG</a>
-            <!--<a class="btn btn-primary" href="addSong.html" role="button">ADD SONG</a>-->
-
-            <a class="btn btn-large btn-secondary" href="searchSong.html">SEARCH FOR SONG</a>
-
+        <div class="dropdown ">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Choose a category to search or edit
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="songSearch.html">Song</a>
+                <a class="dropdown-item" href="albumSearch.html">Album</a>
+                <a class="dropdown-item" href="artistSearch.html">Artist</a>
+                <a class="dropdown-item" href="labelSearch.html">Label</a>
+            </div>
         </div>
 
+        <!--        <div id="addSongButtonId">-->
+        <!--            <a class="btn btn-large btn-secondary" href="songSearch.html">SEARCH SONG</a>-->
+        <!--            &lt;!&ndash;<a class="btn btn-primary" href="addSong.html" role="button">ADD SONG</a>&ndash;&gt;-->
+
+        <!--            <a class="btn btn-large btn-secondary" href="songEdit.html">Edit song</a>-->
+
+        <!--        </div>-->
+
         <!--<div id="searchSongButtonId">-->
-            <!--<a class="btn btn-large btn-info" href="searchSong.html">SEARCH FOR SONG</a>-->
+        <!--<a class="btn btn-large btn-info" href="searchSong.html">SEARCH FOR SONG</a>-->
         <!--</div>-->
 
     </div>
 </div>
-    
-    
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 </body>
 </html>
