added navbar to link all pages back to home page

--- a/albumSearch.html
+++ b/albumSearch.html
@@ -12,6 +12,9 @@
     <title>Album Search</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Album Search</h1>
 
 <!-- Optional JavaScript -->
