--- a/artistAdd.html
+++ b/artistAdd.html
@@ -12,6 +12,9 @@
     <title>Artist Add</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Artist Add</h1>
 
 <!-- Optional JavaScript -->
