--- a/labelEdit.html
+++ b/labelEdit.html
@@ -12,6 +12,9 @@
     <title>Label Edit</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Label Edit</h1>
 
 <!-- Optional JavaScript -->
