--- a/songAdd.html
+++ b/songAdd.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Album Add</title>
+    <title>Song Add</title>
 </head>
 <body>
-<h1>Album Add</h1>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
+
+<h1>Song Add</h1>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
