--- a/songSearch.html
+++ b/songSearch.html
@@ -12,6 +12,9 @@
     <title>Song Search</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Song Search</h1>
 
 <!-- Optional JavaScript -->
