--- a/albumAdd.html
+++ b/albumAdd.html
@@ -12,6 +12,9 @@
     <title>Album Add</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Album Add</h1>
 
 <!-- Optional JavaScript -->
