--- a/artistEdit.html
+++ b/artistEdit.html
@@ -12,6 +12,9 @@
     <title>Artist Edit</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Artist Edit</h1>
 
 <!-- Optional JavaScript -->
