--- a/artistSearch.html
+++ b/artistSearch.html
@@ -12,6 +12,9 @@
     <title>Artist Search</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Artist Search</h1>
 
 <!-- Optional JavaScript -->
