--- a/labelAdd.html
+++ b/labelAdd.html
@@ -12,6 +12,9 @@
     <title>Label Add</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Label Add</h1>
 
 <!-- Optional JavaScript -->
