--- a/labelSearch.html
+++ b/labelSearch.html
@@ -12,6 +12,9 @@
     <title>Label Search</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Label Search</h1>
 
 <!-- Optional JavaScript -->
