--- a/songEdit.html
+++ b/songEdit.html
@@ -12,6 +12,9 @@
     <title>Song Edit</title>
 </head>
 <body>
+<nav class="navbar navbar-light bg-light">
+    <a class="navbar-brand" href="index.html">HOME</a>
+</nav>
 <h1>Song Edit</h1>
 
 <!-- Optional JavaScript -->
