added navbar to link all pages back to home page

--- a/songSearch.html
+++ b/songSearch.html
@@ -15,6 +15,11 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="index.html">HOME</a>
 </nav>
+
+
+<a href="songAdd.html" class="btn btn-success">Add A Song To The Database</a>
+
+
 <h1>Song Search</h1>
 
 <!-- Optional JavaScript -->
