--- a/albumSearch.html
+++ b/albumSearch.html
@@ -15,6 +15,9 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="index.html">HOME</a>
 </nav>
+
+<a href="albumAdd.html" class="btn btn-success">Add An Album To The Database</a>
+
 <h1>Album Search</h1>
 
 <!-- Optional JavaScript -->
