--- a/artistSearch.html
+++ b/artistSearch.html
@@ -15,6 +15,8 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="index.html">HOME</a>
 </nav>
+
+<a href="artistAdd.html" class="btn btn-success">Add An Artist To The Database</a>
 <h1>Artist Search</h1>
 
 <!-- Optional JavaScript -->
