--- a/labelSearch.html
+++ b/labelSearch.html
@@ -15,6 +15,8 @@
 <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="index.html">HOME</a>
 </nav>
+
+<a href="labelAdd.html" class="btn btn-success">Add A Recording Label To The Database</a>
 <h1>Label Search</h1>
 
 <!-- Optional JavaScript -->
