added form to songAdd page

--- a/songAdd.html
+++ b/songAdd.html
@@ -18,6 +18,40 @@
 
 <h1>Song Add</h1>
 
+<div class="container">
+    <div class="card col-sm-6">
+        <div class="card-body">
+            <h5 class="card-title" style="text-align: center">Add A Song</h5>
+            <form>
+
+
+                <div class="form-group col-md-6">
+                    <label for="songNameId">Song Name</label>
+                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="songNameId"
+                           placeholder="Name of Song">
+                </div>
+
+                <div class="form-group col-md-6">
+                    <label for="albumId">Album</label>
+                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="albumId"
+                           placeholder="Name of Album">
+                </div>
+
+                <div class="form-group col-md-6">
+                    <label for="artistId">Artist</label>
+                    <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="artistId"
+                           placeholder="Name of Artist">
+                </div>
+
+
+                <button type="submit" class="btn btn-primary" id="newSongSubmitId">Add Song</button>
+            </form>
+        </div>
+    </div>
+
+</div>
+
+
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
