album search page complete

--- a/albumSearch.html
+++ b/albumSearch.html
@@ -54,7 +54,7 @@
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
                     <th scope="col">Release Date</th>
-                    <th scope="col">Artist</th>
+                    <th scope="col">Label</th>
                     <th scope="col">Actions</th>
                 </tr>
                 </thead>
@@ -63,7 +63,7 @@
                     <th scope="row">1</th>
                     <td>Parade</td>
                     <td>1986-03-31</td>
-                    <td>Prince</td>
+                    <td>Warner Brothers</td>
                     <td>
                         <a href="albumEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
                         <input type="button" value="DELETE" class="btn btn-danger">
@@ -73,7 +73,7 @@
                     <th scope="row">2</th>
                     <td>Songs About Jane</td>
                     <td>2002-06-25</td>
-                    <td>Maroon 5</td>
+                    <td>Octone</td>
                     <td>
                         <a href="albumEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
                         <input type="button" value="DELETE" class="btn btn-danger">
@@ -83,7 +83,7 @@
                     <th scope="row">3</th>
                     <td>Random Access Memories</td>
                     <td>2013-06-17</td>
-                    <td>Daft Punk</td>
+                    <td>Columbia</td>
                     <td>
                         <a href="albumEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
                         <input type="button" value="DELETE" class="btn btn-danger">
