--- a/albumAdd.html
+++ b/albumAdd.html
@@ -12,10 +12,49 @@
     <title>Album Add</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">HOME</a>
-</nav>
-<h1>Album Add</h1>
+
+
+<div class="container-fluid">
+    <div class="container">
+
+
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">HOME</a>
+        </nav>
+
+        <div class="container">
+            <div class="card col-sm-6">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Add A Song</h5>
+                    <form>
+
+                        <div class="form-group col-md-6">
+                            <label for="songNameId">Album Name</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="songNameId"
+                                   placeholder="Name of Song">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="albumId">Album</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="albumId"
+                                   placeholder="Name of Album">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="artistId">Artist</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="artistId"
+                                   placeholder="Name of Artist">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary" id="newSongSubmitId">Add Song</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
