album add and edit pages complete

--- a/albumAdd.html
+++ b/albumAdd.html
@@ -25,25 +25,25 @@
         <div class="container">
             <div class="card col-sm-6">
                 <div class="card-body">
-                    <h5 class="card-title" style="text-align: center">Add A Song</h5>
+                    <h5 class="card-title" style="text-align: center">Add An Album</h5>
                     <form>
 
                         <div class="form-group col-md-6">
-                            <label for="songNameId">Album Name</label>
-                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="songNameId"
-                                   placeholder="Name of Song">
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <label for="albumId">Album</label>
-                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="albumId"
+                            <label for="albumNameId">Album Name</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="albumNameId"
                                    placeholder="Name of Album">
                         </div>
 
                         <div class="form-group col-md-6">
-                            <label for="artistId">Artist</label>
-                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="artistId"
-                                   placeholder="Name of Artist">
+                            <label for="labelId">Label</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="labelId"
+                                   placeholder="Name of Label">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="releaseDateId">Release Date</label>
+                            <input type="date" class="form-control mb-2 mr-sm-2 mb-sm-0" id="releaseDateId"
+                                   placeholder="Release Date">
                         </div>
 
                         <button type="submit" class="btn btn-primary" id="newSongSubmitId">Add Song</button>
