--- a/albumEdit.html
+++ b/albumEdit.html
@@ -12,10 +12,49 @@
     <title>Album Edit</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">HOME</a>
-</nav>
-<h1>Album Edit</h1>
+
+
+<div class="container-fluid">
+    <div class="container">
+
+
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">HOME</a>
+        </nav>
+
+        <div class="container">
+            <div class="card col-sm-6">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Edit Album</h5>
+                    <form>
+
+                        <div class="form-group col-md-6">
+                            <label for="albumNameId">Album Name</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="albumNameId"
+                                   placeholder="Name of Album">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="labelId">Label</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="labelId"
+                                   placeholder="Name of Label">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="releaseDateId">Release Date</label>
+                            <input type="date" class="form-control mb-2 mr-sm-2 mb-sm-0" id="releaseDateId"
+                                   placeholder="Release Date">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary" id="editAlbumSubmitId">Edit Album</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
