artist add and edit pages complete

--- a/artistEdit.html
+++ b/artistEdit.html
@@ -12,10 +12,40 @@
     <title>Artist Edit</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">HOME</a>
-</nav>
-<h1>Artist Edit</h1>
+
+
+<div class="container-fluid">
+    <div class="container">
+
+
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">HOME</a>
+        </nav>
+
+        <br>
+
+        <div class="container">
+            <div class="card col-sm-6">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Edit Artist</h5>
+                    <form>
+
+                        <div class="form-group col-md-6">
+                            <label for="artistNameId">Artist Name</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="artistNameId"
+                                   placeholder="Name of Artist">
+                        </div>
+
+
+                        <button type="submit" class="btn btn-primary" id="editArtistSubmitId">Edit Artist</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
