label edit page complete

--- a/labelSearch.html
+++ b/labelSearch.html
@@ -12,17 +12,102 @@
     <title>Label Search</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">HOME</a>
-</nav>
+<div class="container-fluid">
+    <div class="container">
 
-<br>
-<a href="labelAdd.html" class="btn btn-success">Add A Recording Label To The Database</a>
-<br>
+        <div>
+            <nav class="navbar navbar-light bg-light">
+                <a class="navbar-brand" href="index.html">HOME</a>
+            </nav>
+        </div>
 
-<h1>Label Search</h1>
+        <div>
+            <br>
+            <a href="labelAdd.html" class="btn btn-success">Add A Label To The Database</a>
+            <br>
+        </div>
+
+        <div>
+            <br>
+            <br>
+
+            <form>
+
+                <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <input type="text" class="form-control" id="exampleLabelSearch"
+                               placeholder="Search for Recording Label">
+                    </div>
+
+                    <div>
+                        <button type="submit" class="btn btn-primary">SEARCH</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div>
+            <br>
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Street Address</th>
+                    <th scope="col">City</th>
+                    <th scope="col">State</th>
+                    <th scope="col">Zip Code</th>
+                    <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Warner Brothers</td>
+                    <td>111 Main St</td>
+                    <td>Los Angeles</td>
+                    <td>CA</td>
+                    <td>54321</td>
+                    <td>
+                        <a href="labelEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
+                        <input type="button" value="DELETE" class="btn btn-danger">
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Octone</td>
+                    <td>5050 6th Ave</td>
+                    <td>New York</td>
+                    <td>NY</td>
+                    <td>30303</td>
+                    <td>
+                        <a href="labelEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
+                        <input type="button" value="DELETE" class="btn btn-danger">
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>Columbia</td>
+                    <td>7000 N Clark St.</td>
+                    <td>Chicago</td>
+                    <td>IL</td>
+                    <td>05939</td>
+                    <td>
+                        <a href="labelEdit.html" class="btn btn-info" style="margin-right: 15px">EDIT</a>
+                        <input type="button" value="DELETE" class="btn btn-danger">
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+
+        </div>
+
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
