--- a/labelEdit.html
+++ b/labelEdit.html
@@ -12,10 +12,63 @@
     <title>Label Edit</title>
 </head>
 <body>
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">HOME</a>
-</nav>
-<h1>Label Edit</h1>
+
+
+<div class="container-fluid">
+    <div class="container">
+
+
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="index.html">HOME</a>
+        </nav>
+
+        <br>
+
+        <div class="container">
+            <div class="card col-sm-6">
+                <div class="card-body">
+                    <h5 class="card-title" style="text-align: center">Edit Label</h5>
+                    <form>
+
+                        <div class="form-group col-md-6">
+                            <label for="labelNameId">Label Name</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="labelNameId"
+                                   placeholder="Name of Label">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="streetAddressId">Address</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="streetAddressId"
+                                   placeholder="Street Address">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="cityId">City</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="cityId"
+                                   placeholder="City">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="stateId">State</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="stateId"
+                                   placeholder="State">
+                        </div>
+
+                        <div class="form-group col-md-6">
+                            <label for="zipCodeId">Zip Code</label>
+                            <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="zipCodeId"
+                                   placeholder="Zip Code">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary" id="editLabelSubmitId">Edit Label</button>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
