--- a/songSearch.html
+++ b/songSearch.html
@@ -15,11 +15,27 @@
 <div class="container-fluid">
     <div class="container">
 
+
         <div>
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <a class="navbar-brand" href="index.html">HOME</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="songSearch.html">Song <span
+                                class="sr-only">(current)</span></a>
+                        <a class="nav-item nav-link" href="albumSearch.html">Album</a>
+                        <a class="nav-item nav-link" href="artistSearch.html">Artist</a>
+                        <a class="nav-item nav-link" href="labelSearch.html">Label</a>
+                    </div>
+                </div>
             </nav>
         </div>
+
+
 
         <div>
             <br>
