--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <p>Database of recorded music.</p>
         </div>
 
-        <div class="dropdown ">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+        <div class="dropdown d-flex justify-content-center ">
+            <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Choose a category to search or edit
+                Choose a category to search, add to, or edit
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="songSearch.html">Song</a>
