updated to album add page

--- a/albumAdd.html
+++ b/albumAdd.html
@@ -62,7 +62,7 @@
                                    placeholder="Release Date">
                         </div>
 
-                        <button type="submit" class="btn btn-primary" id="newSongSubmitId">Add Song</button>
+                        <button type="submit" class="btn btn-primary" id="newAlbumSubmitId">Add Album</button>
 
                     </form>
                 </div>
